[package]
name = "saito_rust"
version = "0.1.0"
authors = [
    "Clayton Rabenda <clay@saito.tech>",
    "Stephen Peterkins <stephen@saito.tech>"
]
edition = "2018"
default-run = "saito_rust"

[[bin]]
name = "saito-spammer"
path = "src/bin/spammer.rs"

[[bin]]
name = "walletcli"
path = "src/bin/walletcli.rs"

[dependencies]
ahash = "0.7.4"
bigint = "4.4.3"
bincode = "1.3"
chrono = "0.4"
enum-variant-count-derive = { path = "enum-variant-count-derive" }
futures = { version = "0.3", default-features = false }
blake3 = { version = "0.3.8", features = ["rayon"] }
base58 = "0.1.0"
hex = "0.4.3"
jemallocator = "0.1.9"
jemalloc-ctl = "0.2.0"
lazy_static = "1.4.0"
merkle = "1.11.0"
ring = "0.16.20"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_with = "1.9.4"
secp256k1 = { version = "0.20.3", features = ["global-context", "serde"] }
rand = "0.8.4"
warp = "0.3"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.4"}

[dev-dependencies]
criterion = "0.3"

[features]
test-utilities = []
