[package]
name = "saito_rust"
version = "0.1.0"
authors = [
    "Clayton Rabenda <clay@saito.tech>",
    "Stephen Peterkins <stephen@saito.tech>",
    "David Lancashire <david@saito.tech>"
]
edition = "2018"
default-run = "saito_rust"


[[bin]]
name = "saitocli"
path = "src/bin/saitocli.rs"

[dependencies]
aes = "0.7.5"
ahash = "0.7.6"
async-recursion = "0.3.2"
base58 = "0.2.0"
bigint = "4.4.3"
bincode = "1.3"
blake3 = { version = "1.1.0", features = ["rayon"] }
block-modes = "0.8.1"
chrono = "0.4"
config = "0.11"
clap = "2.33.3"
futures = { version = "0.3", default-features = false }
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
macros = { path = "macros" }
merkle = "1.11.0"
rand = "0.8.4"
rayon = "1.5"
reqwest = "0.11"
ring = "0.16.20"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.68"
serde_with = "1.11.0"
secp256k1 = { version = "0.20.3", features = ["global-context", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8" }
tokio-tungstenite = { version = "0.15.0" }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.2.2" }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3.1"

[dev-dependencies]
criterion = "0.3"
ctor = "0.1.21"
simple_logger = "1.13.0"
