[package]
name = "enum-variant-count-derive"
version = "0.1.0"
authors = ["Clayton Rabenda <claytonrabenda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
